--- a/css/style.css
+++ b/css/style.css
@@ -101,8 +101,7 @@ html, body {
 
 .Linkedin:hover,
 .Instagram:hover,
-.Facebook:hover,
-.Github:hover {
+.Facebook:hover {
   box-shadow: 0 4px 20px rgba(180, 180, 180, 0.5);
   cursor: pointer;
   transform: scale(1.05);
