--- a/css/style.css
+++ b/css/style.css
@@ -31,8 +31,8 @@ html, body {
 
 /* Image container */
 .parent {
-  width: 30vw;
-  height: 30vw;
+  width: 50vw;
+  height: 50vw;
   margin: 0 auto;
 }
 
@@ -48,7 +48,7 @@ html, body {
 
 /* Welcome text */
 .welcome {
-  width: 50vw;
+  width: 40vw;
   color: white;
   background-color: rgba(255, 255, 255, 0.05);
   border: 1px solid rgba(255, 255, 255, 0.2);
@@ -87,8 +87,7 @@ html, body {
 /* Buttons */
 .Linkedin,
 .Instagram,
-.Facebook,
-.Github {
+.Facebook{
   justify-content: center;
   align-items: center;
   background-color: transparent;
