--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,7 @@ html, body {
 /* Content layer */
 .content {
   position: relative;
-  z-index: 1;
+
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -48,7 +48,8 @@ html, body {
 
 /* Welcome text */
 .welcome {
-  width: 40vw;
+  font-size:7vw;
+  width: 60vw;
   color: white;
   background-color: rgba(255, 255, 255, 0.05);
   border: 1px solid rgba(255, 255, 255, 0.2);
@@ -70,6 +71,7 @@ html, body {
 /* Button container */
 .container {
   width: 100vw;
+  margin-bottom: 100px;
   display: flex;
   justify-content: space-evenly;
   align-items: center;
